# nested-scrollview-kivy

./: LICENSE  README.md  effects.py  nested_sv.py  pyproject.toml
