[tool.poetry]
name = "nested-scrollview-kivy"
version = "0.1.0"
description = ""
authors = ["Filipe Marchesini <filipe.marchesini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
